@@ -177,13 +177,12 @@ void TWEB::modStop()
 
 string TWEB::httpHead( const string &rcode, int cln, const string &cnt_tp, const string &addattr )
 {
-    return  "HTTP/1.0 "+rcode+"\n"
-	    "Server: "+PACKAGE_STRING+"\n"
-	    "Accept-Ranges: bytes\n"
-	    "Content-Length: "+TSYS::int2str(cln)+"\n"
-	    "Connection: close\n"
-	    "Content-type: "+cnt_tp+"\n"
-	    "Charset="+Mess->charset()+"\n"+addattr+"\n";
+    return  "HTTP/1.0 "+rcode+"\r\n"
+	    "Server: "+PACKAGE_STRING+"\r\n"
+	    "Accept-Ranges: bytes\r\n"
+	    "Content-Length: "+TSYS::int2str(cln)+"\r\n"
+	    "Content-type: "+cnt_tp+"\r\n"
+	    "Charset="+Mess->charset()+"\r\n"+addattr+"\r\n";
 }
 
 string TWEB::pgHead( string head_els )
@@ -837,7 +836,7 @@ void TWEB::HttpPost( const string &url, string &page, const string &sender, vect
 	{
 	    ses.page = pgHead("<META HTTP-EQUIV='Refresh' CONTENT='0; URL=/"MOD_ID"/"+url+"'/>")+pgTail();
 	    page=httpHead("200 OK",ses.page.size(),"text/html",
-		"Set-Cookie: oscd_u_id="+TSYS::int2str(sesOpen(ses.user))+"; path=/;\n")+ses.page;
+		"Set-Cookie: oscd_u_id="+TSYS::int2str(sesOpen(ses.user))+"; path=/;\r\n")+ses.page;
 	    return;
 	}
 	ses.page = pgHead();
@@ -854,7 +853,7 @@ void TWEB::HttpPost( const string &url, string &page, const string &sender, vect
     {
 	ses.page = pgHead("<META HTTP-EQUIV='Refresh' CONTENT='0; URL=/"MOD_ID"/"+url+"'/>")+pgTail();
 	page=httpHead("200 OK",ses.page.size(),"text/html",
-	"Set-Cookie: oscd_u_id=""; path=/;\n")+ses.page;
+	"Set-Cookie: oscd_u_id=""; path=/;\r\n")+ses.page;
 	return;
     }
 
